# disinfo

./: .gitignore  Makefile.am  Makefile.in  README.markdown  aclocal.m4  config.h.in  configure  configure.ac  libtool
lib/: .gitignore  Makefile.in
m4/: .gitignore  gnulib-cache.m4
src/: .gitignore  Makefile.am  Makefile.in  color.c  color.h  common.c  common.h  dbegin.c  dend.c  derrmsg.c  derror.c  dexec.c  dindent.c  dinfo.c  doutdent.c  dshowexec.c  dshowonerror.c  dwarn.c  framing.c  framing.h  indent.c  indent.h  mkerrors.sh
